--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img src="img-profil.jpg" alt="Foto Profil">
             </div>
             <h1>Selamat Datang <br><span>BDUMTAS</span> Music Course</h1>
-            <a href="https://wa.me/6281243635245" target="_blank" class="cta">Daftar Sekarang</a>
+            <a href="https://wa.me/6281243635245?text=Halo%20saya%20tertarik%20untuk%20belajar%20piano" target="_blank" class="cta">Daftar Sekarang</a>
         </main>
     </section>
 
